--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     <section class="hero">
         <h2>Building Foundations for a Brighter Future</h2>
-        <p class="T">Led by Miss S Jha — Where concepts meet clarity.</p>
+        <p class="T">Led by Miss Supriya Jha — Where concepts meet clarity.</p>
     </section>
 
     <div class="container">
@@ -129,7 +129,7 @@
                     <li><strong>Personalized Attention:</strong> We believe every child learns differently.</li>
                     <li><strong>Concept-Based Learning:</strong> Moving beyond rote memorization.</li>
                     <li><strong>Regular Assessments:</strong> Weekly tests to track growth and build confidence.</li>
-                    <li><strong>Mentorship:</strong> Directed by Miss S Jha, focusing on discipline and academic excellence.</li>
+                    <li><strong>Mentorship:</strong> Directed by Miss Supriya Jha, focusing on discipline and academic excellence.</li>
                 </ul>
                 <p><em>Give your child the competitive edge they deserve from Class 1 to 10.</em></p>
             </section>
